<resources>
    <string name="app_name">ListApplication</string>
    <string name="new_event">create new event</string>
    <string name="show_map">show map</string>
    <string name="save_event">save new event</string>
    <string name="cancel_event">cancel event</string>
    <string name="event_descr">event description</string>
    <string name="event_description">Name of activity</string>
    <string name="event_start">event start</string>
    <string name="event_end">event end</string>
    <string name="event_list_header">Events</string>
    <string name="checkbox_status">Status</string>
    <string name="status_active">Status: Active</string>
    <string name="status_inactive">Status: Inactive</string>
    <string name="alert_dialog_edit">Edit</string>
    <string name="alert_dialog_delete">Delete</string>
    <string name="event_location_long">Longitude</string>
    <string name="event_location_lat">Latitude</string>
    <string name="pick_location">Pick location</string>
    <string name="title_activity_map">Map</string>
</resources>
